--- a/view/Views/MainWindow.axaml
+++ b/view/Views/MainWindow.axaml
@@ -66,7 +66,9 @@
             </Grid.ColumnDefinitions>
             
             <!-- Col 1 -->
-            <Button Grid.Column="0" Grid.Row="0" Click="PlayTurn" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="50" Height="50" />
+            <Button Grid.Column="0" Grid.Row="0" Click="PlayTurn" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="50" Height="50">
+                <PathIcon Classes="hitIcon" IsVisible="False" Data="{StaticResource bug_regular}" />
+            </Button>
             <Button Grid.Column="0" Grid.Row="1" Click="PlayTurn" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="50" Height="50" />
             <Button Grid.Column="0" Grid.Row="2" Click="PlayTurn" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="50" Height="50" />
             <Button Grid.Column="0" Grid.Row="3" Click="PlayTurn" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="50" Height="50" />
