--- a/view/Views/MainWindow.axaml
+++ b/view/Views/MainWindow.axaml
@@ -30,6 +30,152 @@
         <Panel Margin="25">
             <Panel x:Name="gamePlayHeader" IsVisible="False">
                 <Image Source="/Assets/Images/sabotage.png" Width="200" HorizontalAlignment="Center" VerticalAlignment="Top" />
+                <Grid VerticalAlignment="Top" HorizontalAlignment="Right" ShowGridLines="False" Height="50" Width="50" Margin="0, 10, 0, 0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="5"></RowDefinition>
+                        <RowDefinition Height="5"></RowDefinition>
+                        <RowDefinition Height="5"></RowDefinition>
+                        <RowDefinition Height="5"></RowDefinition>
+                        <RowDefinition Height="5"></RowDefinition>
+                        <RowDefinition Height="5"></RowDefinition>
+                        <RowDefinition Height="5"></RowDefinition>
+                        <RowDefinition Height="5"></RowDefinition>
+                        <RowDefinition Height="5"></RowDefinition>
+                        <RowDefinition Height="5"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="5"></ColumnDefinition>
+                        <ColumnDefinition Width="5"></ColumnDefinition>
+                        <ColumnDefinition Width="5"></ColumnDefinition>
+                        <ColumnDefinition Width="5"></ColumnDefinition>
+                        <ColumnDefinition Width="5"></ColumnDefinition>
+                        <ColumnDefinition Width="5"></ColumnDefinition>
+                        <ColumnDefinition Width="5"></ColumnDefinition>
+                        <ColumnDefinition Width="5"></ColumnDefinition>
+                        <ColumnDefinition Width="5"></ColumnDefinition>
+                        <ColumnDefinition Width="5"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    
+                    <!-- Col 1 -->
+                    <Button Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5"/>
+                    <Button Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="0" Grid.Row="5" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="0" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="0" Grid.Row="7" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="0" Grid.Row="8" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="0" Grid.Row="9" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    
+                    <!-- Col 2 -->
+                    <Button Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="1" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="1" Grid.Row="4" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="1" Grid.Row="5" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="1" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="1" Grid.Row="7" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="1" Grid.Row="8" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="1" Grid.Row="9" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+        
+                    <!-- Col 3 -->
+                    <Button Grid.Column="2" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="2" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="2" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="2" Grid.Row="4" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="2" Grid.Row="5" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="2" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="2" Grid.Row="7" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="2" Grid.Row="8" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="2" Grid.Row="9" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />            
+                    
+                    <!-- Col 4 -->
+                    <Button Grid.Column="3" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="3" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="3" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="3" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="3" Grid.Row="4" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="3" Grid.Row="5" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="3" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="3" Grid.Row="7" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="3" Grid.Row="8" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="3" Grid.Row="9" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    
+                    <!-- Col 5 -->
+                    <Button Grid.Column="4" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="4" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="4" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="4" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="4" Grid.Row="4" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="4" Grid.Row="5" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="4" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="4" Grid.Row="7" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="4" Grid.Row="8" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="4" Grid.Row="9" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    
+                    <!-- Col 6 -->
+                    <Button Grid.Column="5" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="5" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="5" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="5" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="5" Grid.Row="4" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="5" Grid.Row="5" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="5" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="5" Grid.Row="7" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="5" Grid.Row="8" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="5" Grid.Row="9" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    
+                    <!-- Col 7 -->
+                    <Button Grid.Column="6" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="6" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="6" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="6" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="6" Grid.Row="4" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="6" Grid.Row="5" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="6" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="6" Grid.Row="7" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="6" Grid.Row="8" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="6" Grid.Row="9" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+        
+                    <!-- Col 8 -->
+                    <Button Grid.Column="7" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="7" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="7" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="7" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="7" Grid.Row="4" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="7" Grid.Row="5" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="7" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="7" Grid.Row="7" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="7" Grid.Row="8" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="7" Grid.Row="9" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    
+                    <!-- Col 9 -->
+                    <Button Grid.Column="8" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="8" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="8" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="8" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="8" Grid.Row="4" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="8" Grid.Row="5" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="8" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="8" Grid.Row="7" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="8" Grid.Row="8" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="8" Grid.Row="9" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    
+                    <!-- Col 10 -->
+                    <Button Grid.Column="9" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="9" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="9" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="9" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="9" Grid.Row="4" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="9" Grid.Row="5" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="9" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="9" Grid.Row="7" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="9" Grid.Row="8" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                    <Button Grid.Column="9" Grid.Row="9" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="5" Height="5" />
+                </Grid>
             </Panel>
             <Panel x:Name="splashHeader" IsVisible="True" Margin="0, 0, 0, 50">
                 <Image Source="/Assets/Images/sabotage.png" Width="200" HorizontalAlignment="Center" />
