--- a/view/Views/MainWindow.axaml
+++ b/view/Views/MainWindow.axaml
@@ -28,6 +28,10 @@
             </ExperimentalAcrylicBorder.Material>
         </ExperimentalAcrylicBorder>
         <Panel Margin="25">
+            <Panel x:Name="gameOverHeader" IsVisible="False" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <TextBlock TextAlignment="Center" FontFamily="/Assets/Fonts/BasicallyAMono-Bold.ttf#" FontSize="48">GAME OVER</TextBlock>
+                <TextBlock TextAlignment="Center" x:Name="gameOverMessage" Margin="0, 75, 0, 0"></TextBlock>
+            </Panel>
             <Panel x:Name="gamePlayHeader" IsVisible="False">
                 <Image Source="/Assets/Images/sabotage.png" Width="200" HorizontalAlignment="Center" VerticalAlignment="Top" />
                 <Grid VerticalAlignment="Top" HorizontalAlignment="Right" ShowGridLines="False" Height="50" Width="50" Margin="0, 10, 0, 0">
